Fix T59137: Prefs moves header to bottom

Only use a new spaces header alignment when no previous header exists.